--- a/EmployeeManagementSystemBackend/src/main/resources/application.properties
+++ b/EmployeeManagementSystemBackend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=EmployeeManagementSystem
 
-spring.datasource.url=jdbc:mysql://localhost:3306/workshop
-spring.datasource.username=root
-spring.datasource.password=8989
+spring.datasource.url=jdbc:mysql://localhost:3306/xyz
+spring.datasource.username=xyz
+spring.datasource.password=xyz
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
@@ -11,8 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 # SMTP server settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=alokmaurya9263@gmail.com
-spring.mail.password=nqmuebagsqagdrsc
+spring.mail.username=your_email@gmail.com
+spring.mail.password=your_app_pasword
 
 # Additional email properties
 spring.mail.properties.mail.smtp.auth=true
